# MDE-X

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  Makefile  install.sh  pyproject.toml  rust-toolchain.toml  setup.py
.claude/: CLAUDE.md
crates/mackes-panel/: Cargo.toml
crates/mackes-panel/src/: admin_menu.rs  app_module.rs  config_store.rs  desktop_files.rs  dock.rs  main.rs  status_cluster.rs  top_bar.rs  watermark.rs  weather.rs  windows.rs
data/sway/: config
docs/: EPIC-production-ready-mackes.md  PROJECT_WORKLIST.md
install-helpers/: configure-lightdm.sh  parity-overlay.sh  sync-user-sway-exec-lines.sh
mackes/: __init__.py  __main__.py  admin_session.py  app.py  app_mgmt.py  birthright.py  birthright_check.py  caddy_gateway.py  clipboard_app.py  conky_hud.py  debloat.py  drawer.py  fleet.py  headscale_postgres.py  lightdm.py  mdns_relay.py  media_sync_daemon.py  mesh.py  mesh_browser.py  mesh_derp.py  mesh_discovery.py  mesh_fs.py  mesh_fs_fuse.py  mesh_media.py  mesh_metrics.py  mesh_nats.py  mesh_notifications.py  mesh_perf.py  mesh_services.py  mesh_ssh.py  mesh_sync.py  mesh_thumbnailer.py  mesh_vpn.py  native_clients.py  presets.py  snapshots.py  uninstall.py
mde/: __init__.py
tests/: conftest.py  test_cb3_4_comps_group.py  test_css_resolution.py  test_derper_unit.py  test_install_sh_rebrand.py  test_mde_migrate_from_1x.py  test_mde_python_facade.py  test_menu_integration.py  test_mesh.py  test_mesh_services.py  test_mesh_sync.py  test_mesh_vpn.py  test_panel_e2e_xdotool.py  test_remmina_sync.py  test_uninstall_legacy.py  (+1 more)
(+280 files in other folders)
